--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,11 @@ section {
 /* ---- Module Rules ---- */
 
 /* Navigation Styles*/
+.navbar__menu {
+    display: flex;
+    justify-content: center;
+}
+
 .navbar__menu ul {
     padding-left: 0;
     margin: 0;
@@ -95,10 +100,15 @@ section {
 /* Header Styles */
 .page__header {
     background: #fff;
-    position: fixed;
     top: 0;
     width: 100%;
     z-index: 5;
+}
+
+#navbar__list {
+    position: fixed;
+    background: rgba(0,0,0,0.7);
+    top: 0;
 }
 
 /* Footer Styles */
